# YuriAudio2Notion

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  api_server.py  app_post.py  compose.yml  config.yaml  core_processor.py  descrip_process.py  fanjiao_client.py  flask_main.py  flask_mian.py  flask_post.py  local_example.env  local_main.py  main.py  main_button.py  nginx_example.conf  notion_client_cus.py  notion_post_para_get.py  pyproject.toml  requirements.txt  test_post.py  test_post_database.py  waiting_up.txt  webhook_serve.py  webhook_server.py
.github/: dependabot.yml
.github/workflows/: co-op-translator.yml  docker-publish.yml  docker-release.yml
app/: cli.py  main.py
app/api/: middlewares.py  routes.py
app/clients/: fanjiao.py  image_upload.py  notion.py
app/constants/: __init__.py  notion_fields.py
app/core/: description_audio_parser.py  description_parser.py  image_upload.py  log_broadcaster.py  processor.py
app/services/: description_album_parser.py  fanjiao_album_service.py  fanjiao_audio_service.py  fanjiao_service.py  notion_service.py
app/utils/: cache.py  config.py  logger.py  notion_builder.py  notion_property.py
docs/: ARCHITECTURE.md  note.md
notion_button/: notion_webhook_info.json  simulate_button_click.py
scripts/: inspect_data_source.py  inspect_page.py
src/clients/: fanjiao_client.py  notion_client_cus.py
src/core/: core_processor.py  descrip_process.py
src/scripts/: main.py
tests/: app_post_coooode.py  app_post_soyet.py  test_description_audio_parser.py  test_post_database_coooode.py
(+6 files in other folders)
